fix(content): dark mode button 改为原生Notion样式

--- a/src/content-scripts/content.less
+++ b/src/content-scripts/content.less
@@ -333,9 +333,14 @@
   font-size: 14px;
   line-height: 1.2;
   min-width: 0px;
-  padding-left: 8px;
+  padding-left: 0px;
   padding-right: 8px;
   color: rgb(55, 53, 47);
+  &:hover{
+    &>label{
+      background-color: #D0CFCB;
+    }
+  }
 }
 
 #notionx-dark-btn input {
@@ -345,23 +350,21 @@
 
 #notionx-dark-btn label {
   display: inline-flex;
-  border: 1px solid #444;
-  width: 35px;
+  width: 30px;
   height: 18px;
   line-height: 28px;
   border-radius: 15px;
-  background-color: #ecece9;
+  background-color: #DBDAD6;
   cursor: pointer;
-  transition: all .15s linear;
+  transition: all .2s ease;
 }
 
 #notionx-dark-btn input:checked+label {
-  background-color: #0a0a0a;
+  background-color: #2EAADC;
 }
 
 #notionx-dark-btn input:checked+label:after {
-  left: 12px;
-  background-color: #fcfcfc;
+  left: 14px;
   box-shadow: none;
 }
 
@@ -370,15 +373,14 @@
   content: '';
   display: block;
   position: relative;
-  top: 0px;
+  top: 1px;
   left: 1px;
-  width: 20px;
+  width: 14px;
   height: 14px;
   margin-top: 1px;
-  background-color: #333;
+  background-color: #fff;
   border-radius: 15px;
-  box-shadow: 1px 1px 4px 0px #676767;
-  transition: all .15s linear;
+  transition: all .2s ease;
 }
 
 /* 暗黑模式 */
